396-IX. Виборчий кодекс України

--- a/Закони/Про_Центральну_виборчу_комісію.md
+++ b/Закони/Про_Центральну_виборчу_комісію.md
@@ -37,6 +37,14 @@
 
 7. Гарантії незалежності Комісії у здійсненні своїх повноважень встановлюються Конституцією України, цим та іншими законами України.
 
+Незалежність Комісії забезпечується:
+
+    1) особливим, встановленим Конституцією України і цим Законом порядком призначення на посади та звільнення з посад членів Комісії;
+
+    2) визначеними цим Законом та іншими законами України гарантіями діяльності Комісії;
+
+    3) особливим, встановленим цим Законом порядком фінансування та матеріально-технічного забезпечення Комісії
+
 **Стаття 4.** Відкритість і публічність у діяльності Комісії
 
 1. Діяльність Комісії здійснюється відкрито і публічно.
@@ -50,6 +58,11 @@
 5. Рішення та інша інформація про діяльність Комісії оприлюднюються у випадках, порядку та строки, встановлені Законом України "Про доступ до публічної інформації" та іншими законами. Комісія надає інформацію за запитами відповідно до Закону України "Про доступ до публічної інформації".
 
 6. Комісія має друкований орган - "Вісник Центральної виборчої комісії".
+
+7. Комісія має офіційний веб-сайт, на якому розміщуються рішення Комісії, інформація про вибори, референдуми, інші матеріали про діяльність Комісії, інформація щодо прав та порядку забезпечення виборчих прав громадян, а також інші матеріали, передбачені цим Законом.
+
+Офіційний веб-сайт має відповідати технічним вимогам до створення (модернізації) офіційних веб-сайтів, встановленим Кабінетом Міністрів України, для безперешкодного доступу користувачів із порушеннями зору та слуху
+
 
 **Стаття 5.** Місцезнаходження Комісії
 
@@ -66,7 +79,7 @@
 
 1. Верховна Рада України призначає на посади та звільняє з посад членів Комісії за поданням Президента України.
 
-2. У поданні Президента України про призначення на посаду членів Комісії враховуються пропозиції депутатських фракцій і груп, утворених у поточному скликанні Верховної Ради України.
+2. У поданні Президента України про призначення членів Комісії враховуються пропозиції депутатських фракцій і груп, утворених у поточному скликанні Верховної Ради України, а також моральні якості осіб, які пропонуються до складу Комісії, наявність у них професійного, наукового або громадського досвіду у сфері організації та проведення виборів чи референдумів, виборчого права.
 
 3. До складу Комісії входять 17 членів Комісії.
 
@@ -76,7 +89,7 @@
 
 6. Голова Комісії, заступники Голови Комісії, секретар Комісії, а також не менше п'яти інших членів Комісії повинні мати вищу юридичну освіту.
 
-7. Комісія працює на постійній основі. Член Комісії є державним службовцем.
+7. Комісія працює на постійній основі. Член Комісії є публічним службовцем. Правовий статус члена Комісії визначається цим Законом
 
 8. Строк повноважень члена Комісії - 7 років.
 
@@ -92,9 +105,9 @@
 
 5. Член Комісії, який до свого призначення на посаду був членом будь-якої політичної партії, на час здійснення своїх повноважень зупиняє членство у цій партії. Він не може брати участі в її діяльності чи виконувати доручення партії, будь-якого її органу або посадової особи.
 
-6. Стосовно осіб, які претендують на зайняття посади члена Комісії, за їх письмовою згодою проводиться спеціальна перевірка в порядку, встановленому Законом України "Про засади запобігання і протидії корупції".
+6. Стосовно осіб, які претендують на зайняття посади члена Комісії, за їх письмовою згодою проводиться спеціальна перевірка в порядку, встановленому Законом України "Про запобігання корупції".
 
-7. Особи, які претендують на зайняття посади члена Комісії, до призначення на відповідну посаду подають до органу, який вносить пропозиції щодо їх призначення, декларацію про майно, доходи, витрати і зобов’язання фінансового характеру за формою і в порядку, що встановлені Законом України "Про засади запобігання і протидії корупції", та зобов’язані повідомити органу, який вносить пропозиції щодо їх призначення, про близьких їм осіб, які є членами Комісії або працюють у Секретаріаті Комісії, Службі розпорядника Державного реєстру виборців.
+7. Особи, які претендують на зайняття посади члена Комісії, до призначення на відповідну посаду подають до органу, який вносить пропозиції щодо їх призначення, декларацію про майно, доходи, витрати і зобов’язання фінансового характеру за формою і в порядку, що встановлені Законом України "Про запобігання корупції", та зобов’язані повідомити органу, який вносить пропозиції щодо їх призначення, про близьких їм осіб, які є членами Комісії або працюють у Секретаріаті Комісії, Службі розпорядника Державного реєстру виборців.
 
 **Стаття 8.** Присяга члена Комісії
 
@@ -136,11 +149,15 @@
 
 1. Основною організаційною формою діяльності Комісії є її засідання. На засіданні Комісії може бути розглянуто будь-яке питання, яке відповідно до цього та інших законів України належить до повноважень Комісії.
 
+Засідання Комісії проводяться за місцезнаходженням Комісії. У разі необхідності можуть проводитися виїзні засідання Комісії
+
 2. Засідання Комісії скликаються її Головою, а в разі його відсутності - одним із заступників Голови Комісії. У разі відсутності Голови або заступників Голови Комісії чи їх відмови скликати засідання Комісії воно може бути скликане не менш як третиною членів Комісії з обов'язковим повідомленням усіх членів Комісії про час і місце засідання.
 
 3. Засідання Комісії веде її Голова або, за дорученням Голови чи за погодженням між його заступниками, один із його заступників. У разі відсутності Голови та його заступників або невиконання ними з будь-яких причин своїх функцій Комісія обирає головуючого на засіданні із свого складу більшістю голосів від складу Комісії.
 
-4. Засідання Комісії є повноважним за умови присутності не менш як двох третин передбаченого цим Законом складу Комісії.
+4. Засідання Комісії є повноважним за умови присутності не менш як одинадцяти членів Комісії.
+
+Присутність члена Комісії на засіданні Комісії може забезпечуватися за допомогою технічних засобів у порядку, визначеному Комісією
 
 5. Порядок денний засідання Комісії пропонує її Голова, а в разі його відсутності - головуючий на засіданні. Порядок денний засідання затверджується рішенням Комісії.
 
@@ -176,6 +193,8 @@
 
 8. Рішення Комісії може бути оскаржене до суду в порядку, встановленому цим та іншими законами України.
 
+9. Постанови Центральної виборчої комісії невідкладно оприлюднюються на її офіційному веб-сайті із забезпеченням можливості перегляду, копіювання та роздрукування інформації, а також у вигляді набору даних, організованого у форматі, що дозволяє його автоматизоване оброблення електронними засобами (машинозчитування) з метою повторного використання.
+
 **Стаття 13.** Обов'язковість рішень Комісії
 
 1. Рішення Комісії, прийняте в межах її повноважень, є обов'язковим для виконання всіма суб'єктами відповідного виборчого процесу чи процесу референдуму, в тому числі відповідними виборчими комісіями і комісіями з референдумів нижчого рівня, а також органами виконавчої влади, органами місцевого самоврядування, їх посадовими і службовими особами, об'єднаннями громадян, підприємствами, установами, організаціями усіх форм власності та громадянами України.
@@ -194,6 +213,8 @@
 
 1. Виборці, виборчі комісії, комісії з референдумів, інші суб'єкти виборчого і референдумного процесів, органи державної влади, органи місцевого самоврядування, об'єднання громадян, підприємства, установи, організації незалежно від форм власності, іноземці та особи без громадянства, а також органи влади іноземних держав, міжнародні організації мають право звернутися до Комісії із зверненнями з питань, що належать до повноважень Комісії, в порядку, встановленому цим Законом, Законом України "Про звернення громадян" та іншими законами України. Звернення може бути подано як окремою особою (індивідуальне), так і групою осіб (колективне).
 
+Мова звернень до Комісії та їх розгляду визначається Законом України "Про забезпечення функціонування української мови як державної.
+
 2. Звернення, подані до Комісії, підлягають реєстрації в порядку, встановленому Комісією.
 
 3. Під зверненням за цим Законом слід розуміти:
@@ -202,9 +223,11 @@
 
     2) скаргу, в якій міститься інформація про порушення законодавства України про вибори і референдуми та вимога забезпечити реалізацію і захист виборчих прав, права на участь у референдумі, законних інтересів суб'єктів виборчого і референдумного процесів, поновити порушені виборчі права та право на участь у референдумі.
 
-4. Скарги подаються і розглядаються в порядку та строки, встановлені відповідним законом України про вибори або референдуми.
+4. Скарги, що стосуються виборів чи референдумів та/або подані під час відповідного виборчого процесу або процесу референдуму, подаються до Комісії у порядку та строки, встановлені відповідним законом.
 
-5. Заява може бути подана до Комісії в письмовій або усній формі. В усній формі заяви подаються під час особистого прийому членами Комісії і фіксуються в порядку, встановленому Комісією.
+Скарги, що не стосуються виборів чи референдумів та/або подані не під час такого виборчого процесу або процесу референдуму, подаються до Комісії у порядку та строки, встановлені Законом України "Про звернення громадян" та іншими законами України, з особливостями, встановленими частиною десятою цієї статті.
+
+5. Заява може бути подана до Комісії у письмовій (на паперових носіях або у формі електронного документа) або усній формі. В усній формі заяви подаються під час особистого прийому членами Комісії і фіксуються в порядку, встановленому Комісією
 
 6. Письмова заява, подана до Комісії, повинна містити:
 
@@ -226,39 +249,45 @@
 
 9. Якщо заява не містить даних, необхідних для прийняття обґрунтованого рішення щодо вирішення по суті питання, порушеного у заяві, або надіслання заяви за належністю, така заява повертається заявникові з відповідними роз'ясненнями в строк, встановлений Законом України "Про звернення громадян", якщо інший строк не встановлено відповідним законом України про вибори або референдуми.
 
-10. Скарга, подана до Комісії, повинна містити:
+10. Скарга, що не стосується виборів чи референдуму та/або подана не під час такого виборчого процесу або процесу референдуму, подається до Комісії у письмовій формі на паперових носіях та повинна містити:
 
     1) назву Комісії, до якої вона подається;
-
-    2) прізвище, ім'я, по батькові, місце проживання особи, що подає скаргу, або точну назву та місцезнаходження (офіційну поштову адресу) суб'єкта подання скарги - юридичної особи чи іншого колективного суб'єкта виборчого процесу або процесу референдуму;
-
-    3) назву суб'єкта оскарження та його поштову адресу;
-
+    
+    2) прізвище, ім’я, по батькові (найменування) суб’єкта звернення із скаргою, його місце проживання чи офіційну контактну адресу (юридичну або поштову адресу), а також номер засобу зв’язку, адресу електронної пошти, якщо такі є;
+    
+    3) прізвище, ім’я, по батькові (найменування) суб’єкта оскарження, його місце проживання чи офіційну контактну адресу (юридичну або поштову адресу), а також номер засобу зв’язку, адресу електронної пошти, якщо вони відомі суб’єкту звернення;
+    
     4) суть порушеного питання (предмет скарги);
-
-    5) сформульовані вимоги;
-
-    6) виклад обставин і зазначення доказів, якими заявник скарги обґрунтовує свої вимоги;
-
+    
+    5) чітко сформульовані вимоги із зазначенням суті рішення, ухвалення якого вимагається від Комісії відповідно до її повноважень;
+    
+    6) виклад обставин і зазначення доказів, якими суб’єкт звернення зі скаргою обґрунтовує свої вимоги;
+    
     7) перелік документів і матеріалів, що додаються;
+    
+    8) підпис суб’єкта звернення зі скаргою чи особи, уповноваженої представляти відповідного суб’єкта, із зазначенням дати підписання;
+    
+    9) дату підписання скарги.
 
-    8) зазначення заінтересованих осіб, яких суб'єкт подання скарги вважає за потрібне залучити до розгляду скарги;
+У скарзі можуть бути зазначені заінтересовані особи, яких суб’єкт звернення зі скаргою вважає за потрібне залучити до розгляду скарги.
 
-    9) підпис заявника скарги (представника суб'єкта подання скарги - юридичної особи чи іншого колективного суб'єкта виборчого процесу або процесу референдуму);
+У разі надходження копії скарги засобами електронної пошти (в електронній формі) скарга опрацьовується Комісією в установленому цим Законом порядку.
 
-    10) дату підписання скарги.
-
-11. Скарга, оформлена без дотримання вимог частини десятої цієї статті, повертається суб'єктові подання скарги або його представнику з відповідними роз'ясненнями не пізніш як на наступний день після дня надходження скарги, якщо інший строк не встановлено відповідним законом України про вибори або референдуми.
+11. Скарга, що не стосується виборів чи референдуму та/або подана під час виборчого процесу або процесу референдуму, оформлена без дотримання вимог частини десятої цієї статті, повертається суб’єкту звернення із скаргою без розгляду Головою Комісії або за його дорученням іншим членом Комісії з відповідними роз’ясненнями не пізніш як на наступний день після дня надходження скарги
 
 **Стаття 15.** Порядок та строки розгляду звернень, поданих до Комісії
 
 1. Заяви та скарги, подані до Комісії, розглядаються у порядку, встановленому цим та іншими законами, а також Регламентом Центральної виборчої комісії.
 
-2. Заяви та скарги, які подані до Комісії під час виборчого процесу чи процесу референдуму та стосуються цього процесу, розглядаються Комісією протягом п'яти днів з дня надходження заяви або скарги, якщо інший строк не встановлено відповідним законом України про вибори або референдуми. Днем подачі такої заяви чи скарги вважається день фактичного отримання скарги Комісією.
+2. Заяви, що подані до Комісії під час виборчого процесу чи процесу референдуму та стосуються цього процесу, розглядаються Комісією протягом п’яти днів з дня подання. Днем подання заяви вважається день її фактичного отримання Комісією.
 
-3. Заяви та інші звернення, які не стосуються виборчого процесу чи процесу референдуму або подані не під час такого процесу, розглядаються Комісією на загальних підставах, встановлених законом.
+3. Заяви та інші звернення, що не стосуються виборчого процесу чи процесу референдуму або подані не під час такого процесу, розглядаються Комісією на загальних підставах, встановлених Законом України "Про звернення громадян" та іншими законами України.
 
-4. Скарга, подана до Комісії, розглядається на засіданні Комісії. За підсумком розгляду скарги Комісія приймає рішення.
+4. Скарги, що стосуються виборів чи референдуму та подані під час виборчого процесу або процесу референдуму, розглядаються Комісією у порядку та строки, встановлені відповідним законом про вибори чи законом про референдуми.
+
+Якщо розгляд питань, порушених у скарзі, не належить до повноважень Комісії, за рішенням Комісії така скарга залишається без розгляду по суті.
+
+Скарги, що не стосуються виборів чи референдуму та/або подані не під час такого виборчого процесу або процесу референдуму, розглядаються Комісією на загальних підставах, встановлених Законом України "Про звернення громадян" та іншими законами України
 
 5. Заява, подана до Комісії, за дорученням Голови Комісії або одного із його заступників попередньо розглядається членом Комісії.
 
@@ -272,7 +301,7 @@
 
 2. Комісія за результатами узагальнення практики застосування законодавства України про вибори і референдуми та практики проведення виборів і референдумів в Україні, а також у разі необхідності може за власною ініціативою розглянути та прийняти у встановленому цим Законом порядку рішення стосовно:
 
-    1) надання виборчим комісіям, комісіям з референдумів роз'яснень і рекомендацій щодо застосування законодавства України про вибори та референдуми;
+    1) надання роз'яснень і рекомендацій щодо застосування законодавства України про вибори та референдуми;
 
     2) організації підготовки та проведення виборів і референдумів;
 
@@ -281,6 +310,24 @@
     4) підготовки пропозицій щодо вдосконалення законодавства України про вибори і референдуми;
 
     5) інших питань, віднесених до повноважень Комісії.
+
+3. У разі необхідності з метою забезпечення дотримання законного перебігу виборчого процесу чи процесу референдуму, захисту виборчих прав громадян та поновлення порушених виборчих прав громадян Комісія може з власної ініціативи розглянути питання діяльності виборчих комісій, комісій з референдумів нижчого рівня та за результатами розгляду:
+
+    1) визнати рішення виборчої комісії або комісії з референдуму чи окремих його положень, дії чи бездіяльність такими, що не відповідають вимогам законодавства про вибори або референдуми, порушують виборчі права громадян, права на участь у референдумі, права та законні інтереси суб’єкта виборчого процесу або процесу референдуму;
+
+    2) скасувати рішення виборчої комісії або комісії з референдуму;
+
+    3) прийняти рішення по суті питання;
+
+    4) зобов’язати виборчу комісію, комісію нижчого рівня повторно розглянути питання, що стало предметом розгляду Комісії;
+
+    5) зобов’язати виборчу комісію, комісію з референдуму здійснити дії, передбачені законодавством, що регулює організацію та порядок проведення виборів або референдумів;
+
+    6) зобов’язати виборчу комісію, комісію з референдуму утриматися від вчинення певних дій;
+
+    7) зобов’язати суб’єкта оскарження здійснити передбачені законодавством, що регулює організацію та порядок проведення виборів або референдумів, дії, які випливають із факту скасування рішення, визнання дій або бездіяльності протиправними;
+
+    8) поновити в інший спосіб порушені виборчі права громадян, права на участь у референдумі, права та законні інтереси суб’єкта виборчого процесу, процесу референдуму
 
 ## Розділ III
 ## ПОВНОВАЖЕННЯ КОМІСІЇ
@@ -300,8 +347,6 @@
 5) здійснює консультативно-методичне забезпечення діяльності виборчих комісій та комісій з референдумів, приймає обов'язкові для використання в роботі виборчих комісій та комісій з референдумів роз'яснення і рекомендації з питань застосування законодавства України про вибори і референдуми;
 
 6) готує пропозиції щодо вдосконалення законів з питань проведення виборів та референдумів;
-
-7) звертається в разі необхідності до Конституційного Суду України щодо офіційного тлумачення Конституції України, законів України або окремих їх положень з питань, що стосуються організації підготовки та проведення виборів і референдумів в Україні;
 
 7-1) встановлює систему територіальної організації загальнодержавних виборів шляхом утворення територіальних виборчих округів та виборчих дільниць з особливостями, визначеними відповідним законом про вибори;
 
@@ -345,7 +390,7 @@
 
 12) встановлює форму та затверджує текст виборчого бюлетеня з виборів Президента України, забезпечує виготовлення виборчих бюлетенів;
 
-13) звертається до Вищого адміністративного суду України щодо скасування реєстрації кандидата на пост Президента України з підстав, встановлених законом;
+13) приймає рішення про скасування реєстрації кандидатів на пост Президента України в порядку, встановленому законом;
 
 14) встановлює та офіційно оприлюднює результати виборів Президента України;
 
@@ -353,7 +398,7 @@
 
 16) після складення присяги вручає новообраному Президенту України посвідчення Президента України;
 
-17) здійснює інші повноваження відповідно до цього Закону, Закону України "Про вибори Президента України" та інших законів України.
+17) здійснює інші повноваження відповідно до цього Закону та інших законів України.
 
 **Стаття 19.** Повноваження Комісії щодо організації підготовки і проведення виборів народних депутатів України
 
@@ -508,9 +553,9 @@
 
     6) представляє Комісію у відносинах з органами державної влади, органами місцевого самоврядування, об'єднаннями громадян, виборчими комісіями, комісіями з референдумів, підприємствами, установами і організаціями, іноземними державами, виборцями;
 
-    7) вносить на затвердження комісії положення про Секретаріат Комісії, Службу розпорядника Державного реєстру виборців, їх структуру, штат та положення про патронатну службу;
+    7) вносить на затвердження комісії положення про Секретаріат Комісії, Службу розпорядника Державного реєстру виборців, їх структуру, штатну чисельність та положення про патронатну службу;
 
-    8) призначає на посади та звільняє з посад керівників Секретаріату Комісії, Служби розпорядника Державного реєстру виборців та інших посадових осіб і працівників Секретаріату Комісії, Служби розпорядника Державного реєстру виборців, працівників патронатної служби, а також вирішує інші питання відповідно до Закону України "Про державну службу" та інших законів України;
+    8) призначає на посади та звільняє з посад керівників, заступників керівників Секретаріату Комісії, Служби розпорядника Державного реєстру виборців;
 
     9) подає на затвердження Комісії фінансовий звіт про витрати коштів Державного бюджету України, виділених на підготовку та проведення відповідних виборів і референдумів, який після затвердження Комісією надсилає до Рахункової палати у строк, визначений чинним законодавством України;
 
@@ -573,8 +618,6 @@
     3) розглядає заяви суб'єктів виборчого процесу та процесу референдуму;
 
     4) проводить особистий прийом громадян, суб'єктів виборчого процесу та процесу референдуму;
-
-    5) вносить до Комісії пропозиції щодо звернень до Конституційного Суду України стосовно офіційного тлумачення Конституції України та законів України з питань виборів і референдумів;
 
     6) вносить пропозиції про залучення науковців і фахівців до експертної, аналітичної та іншої роботи, пов'язаної з виконанням повноважень Комісії;
 
@@ -656,7 +699,23 @@
 
 **Стаття 31.** Дострокове припинення виконання повноважень Голови, заступників Голови, секретаря Комісії
 
-Повноваження Голови Комісії, заступника Голови Комісії, секретаря Комісії припиняються достроково за їх заявою або в разі припинення його повноважень шляхом звільнення з посади як члена Комісії.
+1. Повноваження Голови Комісії, заступника Голови Комісії, секретаря Комісії без звільнення відповідної особи з посади члена Комісії можуть бути припинені достроково рішенням Комісії за заявою такого члена Комісії або за ініціативою більшості членів Комісії.
+
+2. Повноваження Голови Комісії, заступника Голови Комісії, секретаря Комісії припиняються достроково без звільнення відповідної особи з посади члена Комісії за його заявою рішенням Комісії, за яке проголосувала більшість членів Комісії.
+
+Повноваження Голови Комісії, заступника Голови Комісії, секретаря Комісії припиняються достроково без звільнення відповідної особи з посади члена Комісії за ініціативою більшості членів Комісії рішенням Комісії, за яке проголосувало не менш як 13 членів Комісії.
+
+Рішення з питань, зазначених у цій частині, приймаються шляхом таємного голосування.
+
+3. Порядок проведення засідання з питань, зазначених у частині другій цієї статті, визначається Регламентом Комісії.
+
+Засідання Комісії щодо дострокового припинення повноважень Голови Комісії, заступника Голови Комісії, секретаря Комісії без звільнення відповідної особи з посади члена Комісії за ініціативою більшості членів Комісії скликається на їх письмову вимогу.
+
+4. Рішення Комісії, зазначене у частині другій цієї статті, набирає чинності після затвердження Комісією протоколу лічильної комісії про результати таємного голосування.
+
+5. Якщо за рішення, зазначене у частині другій цієї статті, проголосувало менше встановленої кількості членів Комісії, питання про дострокове припинення повноважень відповідної посадової особи не може бути внесене до порядку денного засідання Комісії раніше, ніж через шість місяців.
+
+6. Комісія не може розглядати питання про дострокове припинення повноважень Голови Комісії, заступника Голови Комісії, секретаря Комісії під час виборчого процесу чергових загальнодержавних виборів, чергових місцевих виборів або процесу всеукраїнського референдуму
 
 **Стаття 31-1.** Дострокове припинення повноважень всього складу Комісії
 
@@ -670,12 +729,12 @@
 
 1. Порядок організації роботи Комісії, що не врегульований цим Законом, визначається Регламентом Центральної виборчої комісії.
 
-2. Регламент Центральної виборчої комісії, зміни та доповнення до нього затверджуються постановою Комісії.
+2. Регламент Центральної виборчої комісії та зміни до нього затверджуються постановою Комісії.
 
 3. Регламент Центральної виборчої комісії не може встановлювати додаткових повноважень Комісії або її членів, окрім встановлених цим та іншими законами України.
 
 ## Розділ V
-## СЕКРЕТАРІАТ КОМІСІЇ ТА СЛУЖБИ КОМІСІЇ
+## СЕКРЕТАРІАТ КОМІСІЇ ТА СЛУЖБИ КОМІСІЇ. КОНСУЛЬТАТИВНІ ТА ІНШІ ДОПОМІЖНІ ОРГАНИ КОМІСІЇ
 
 **Стаття 33.** Забезпечення діяльності Комісії
 
@@ -683,7 +742,7 @@
 
 2. Положення про Секретаріат Комісії, його структура, штат та положення про патронатну службу затверджуються Комісією за пропозицією Голови Комісії.
 
-3. Керівник та інші працівники Секретаріату Комісії, патронатної служби Комісії, Служби розпорядника Державного реєстру виборців є державними службовцями.
+3. Керівник та інші працівники Секретаріату Комісії, Служби розпорядника Державного реєстру виборців, регіональних та територіальних представництв Комісії є державними службовцями, крім працівників патронатної служби та працівників, які відповідно до Закону України "Про державну службу" виконують функції з обслуговування.
 
 4. Для забезпечення виконання Комісією функцій розпорядника Державного реєстру виборців утворюється Служба розпорядника Державного реєстру виборців. Положення про Службу, структура і штатний розпис Служби затверджується Комісією за пропозицією Голови Комісії.
 
@@ -695,20 +754,36 @@
 
 3. Чисельність та штатний розпис патронатної служби Комісії затверджуються постановою Комісії з урахуванням обсягу фінансування Комісії.
 
-**Стаття 35.** Регіональні представництва Комісії
+**Стаття 35.** Регіональні та територіальні представництва Комісії
 
-1. Для оперативного вирішення питань, пов'язаних з виконанням повноважень Комісії, в регіонах України, визначених частиною другою статті 133 Конституції України, Комісія може створювати свої регіональні представництва в межах коштів Державного бюджету України, передбачених на забезпечення діяльності Комісії.
+1. Для вирішення питань, пов’язаних з виконанням повноважень Комісії, Комісія утворює свої територіальні представництва, які також здійснюють повноваження органу ведення Державного реєстру виборців. Комісія може утворювати свої регіональні та територіальні представництва. Фінансове забезпечення регіональних та територіальних представництв Комісії здійснюється за рахунок коштів державного бюджету.
 
-2. Регіональні представництва Комісії є структурними підрозділами Секретаріату Комісії.
+2. Регіональні та територіальні представництва Комісії за рішенням Комісії можуть утворюватися як юридичні особи публічного права або структурні підрозділи Секретаріату Комісії.
 
-3. Організація діяльності регіональних представництв та межі їх повноважень регулюються Положенням про регіональні представництва Комісії, яке затверджується Комісією.
+Регіональні та територіальні представництва Комісії можуть утворюватися в Автономній Республіці Крим, областях, містах Києві та Севастополі, районах, районах у містах, містах обласного, республіканського (Автономної Республіки Крим) значення та як міжрегіональні територіальні органи, повноваження яких поширюються на декілька адміністративно-територіальних одиниць.
+
+3. Організація діяльності регіональних та територіальних представництв Комісії та межі їх повноважень регулюються положенням про такі представництва, що затверджується Комісією.
+
+4. Керівники і заступники керівників регіональних та територіальних представництв Комісії призначаються на посади і звільняються з посад Головою Комісії.
+
+Інші державні службовці і працівники регіональних та територіальних представництв Комісії призначаються на посади та звільняються з посад керівниками регіональних та територіальних представництв Комісії.
+
+5. Структуру регіональних та територіальних представництв Комісії затверджує Комісія. Штатний розпис та кошторис регіональних та територіальних представництв Комісії затверджує керівник Секретаріату Комісії.
+
+6. Регіональні та територіальні представництва Комісії для організаційного, правового, інформаційного, технічного забезпечення здійснення повноважень, передбачених положенням про такі представництва, у межах структури та штатного розпису можуть залучати відповідних спеціалістів, експертів та технічних працівників
+
+**Стаття 35-1.** Центр підготовки учасників виборчих процесів
+
+1. Для забезпечення виконання Комісією повноважень щодо підвищення правової культури учасників виборчого процесу та процесу референдуму діє Центр підготовки учасників виборчих процесів.
+
+2. Діяльність Центру регулюється положенням, яке затверджується Комісією
 
 ## Розділ VI
 ## ФІНАНСУВАННЯ КОМІСІЇ. МАТЕРІАЛЬНЕ І СОЦІАЛЬНЕ ЗАБЕЗПЕЧЕННЯ ЧЛЕНІВ КОМІСІЇ ТА ПРАЦІВНИКІВ СЕКРЕТАРІАТУ КОМІСІЇ
 
 **Стаття 36.** Фінансування Комісії
 
-1. Витрати, пов'язані з діяльністю Комісії та її Секретаріату, патронатної служби, Служби розпорядника Державного реєстру виборців, фінансуються за рахунок коштів Державного бюджету України.
+1. Фінансування Комісії, Секретаріату Комісії, патронатної служби, Служби розпорядника Державного реєстру виборців, регіональних та територіальних представництв Комісії здійснюється за рахунок коштів бюджету.
 
 2. Комісія має рахунки в установах банків та інших кредитних установах.
 
