--- a/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
+++ b/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
@@ -140,7 +140,7 @@
 
 **Стаття 8.** Забезпечення виборчих прав внутрішньо переміщених осіб
 
-1. Внутрішньо переміщена особа реалізує своє право голосу на виборах Президента України, народних депутатів України, місцевих виборах та референдумах шляхом зміни місця голосування без зміни виборчої адреси згідно з частиною третьою статті 7 Закону України "Про Державний реєстр виборців".
+1. Внутрішньо переміщена особа реалізує своє право голосу на виборах Президента України, народних депутатів України, місцевих виборах та референдумах у порядку, встановленому законом.
 
 **Стаття 9.** Інші права внутрішньо переміщеної особи та її обов’язки
 
