--- a/Закони/Про_рекламу.md
+++ b/Закони/Про_рекламу.md
@@ -25,6 +25,8 @@
 
 * особа - фізична особа, в тому числі фізична особа - підприємець, юридична особа будь-якої форми власності, представництво нерезидента в Україні;
 
+* політична реклама  інформація у будь-якому вигляді, поширена в будь-якій формі, яка має на меті популяризацію діяльності політичної партії (організації партії), привернення уваги до діяльності політичної партії (організації партії) та її позиції щодо питань загальнодержавного (місцевого) значення. До політичної реклами належать також використання символіки або логотипів політичних партій (організацій партій), повідомлення про підтримку політичною партією (організацією партії) видовищних чи інших публічних заходів або привернення уваги до участі у таких заходах політичної партії (організації партії);
+
 * порівняльна реклама - реклама, що містить порівняння з іншими особами та/або товарами (діяльністю) іншої особи, прямо чи опосередковано ідентифікує конкурента або товари чи послуги, що пропонуються конкурентом;
 
 * прихована реклама - інформація про особу чи товар у програмі, передачі, публікації, якщо така інформація слугує рекламним цілям і може вводити в оману осіб щодо дійсної мети таких програм, передач, публікацій;
